--- a/probaprojekt/templates/probahtml.html
+++ b/probaprojekt/templates/probahtml.html
@@ -2,6 +2,11 @@
 <html>
 <head>
 	<title>Cím</title>
+	
+	{% load static %}
+
+	<link rel="stylesheet" type="text/css" href="{% static 'probaapp/styles.css' %}">
+	
 </head>
 <body>
 
